/*
 * Copyright (C) 2023 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package perfetto.protos;

import "protos/perfetto/metrics/custom_options.proto";

message ChromeScrollJankV2 {
  // Total time spent processing scroll updates.
  optional double scroll_processing_ms = 1 [(unit) = "ms_biggerIsBetter"];
  // Of the total scrolling processing time, this much is considered
  // "janky". This excludes jank caused due to
  // `RendererCompositorQueueingDelay`, which can add nontrivial noise.
  optional double scroll_jank_processing_ms = 2 [(unit) = "ms_smallerIsBetter"];
  // Computed as: `100 * scroll_jank_processing_ms / scroll_processing_ms`.
  optional double scroll_jank_percentage = 3 [(unit) = "n%_smallerIsBetter"];
  // The number of scroll janks. Similar to above, this excludes jank caused
  // due to `RendererCompositorQueueingDelay`, which can add nontrivial noise.
  optional int64 num_scroll_janks = 4 [(unit) = "count_smallerIsBetter"];
  // The primary cause, sub-cause, and duration for scroll jank, one for each
  // jank. There are exactly `num_scroll_janks` items in this field.
  message ScrollJankCauseAndDuration {
    optional string cause = 1;
    optional string sub_cause = 2;
    optional double duration_ms = 3 [(unit) = "ms_smallerIsBetter"];
  }
  repeated ScrollJankCauseAndDuration scroll_jank_causes_and_durations = 5;
}
